Preset tree now disables when the picker has locked the preset. Also now the initial selected preset in the filter is the currently selected preset, and the selected preset updates when changed in the picker.

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -330,6 +330,8 @@
 			Background="WhiteSmoke"
 			BorderThickness="0"
 			Canvas.ZIndex="3"
+			IsEnabled="{Binding PickersService.SelectedPicker.Picker.UseEncodingPreset,
+			                    Converter={StaticResource InverseBoolConverter}}"
 			ItemsSource="{Binding PresetsService.AllPresetsTree}"
 			SelectedItemChanged="TreeView_OnSelectedItemChanged"
 			Visibility="{Binding PresetPanelOpen,
