--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -120,18 +120,39 @@
 									<ColumnDefinition Width="*" />
 								</Grid.ColumnDefinitions>
 								<Grid.ContextMenu>
-									<ContextMenu>
-										<MenuItem Command="{Binding CreateSubfolder}" Header="{x:Static res:EncodingRes.PresetFolderCreateSubfolderMenuItem}" />
+									<ContextMenu Visibility="{Binding IsBuiltIn, Converter={StaticResource InverseVisibilityConverter}}">
+										<MenuItem Command="{Binding CreateSubfolder}" Header="{x:Static res:EncodingRes.PresetFolderCreateSubfolderMenuItem}">
+											<MenuItem.Icon>
+												<Image
+													Width="16"
+													Height="16"
+													Source="/Icons/add_folder.png" />
+											</MenuItem.Icon>
+										</MenuItem>
 										<MenuItem
 											Command="{Binding RenameFolder}"
 											Header="{x:Static res:EncodingRes.PrestFolderRenameFolderMenuItem}"
 											Visibility="{Binding IsNotRoot,
-											                     Converter={StaticResource VisibilityConverter}}" />
+											                     Converter={StaticResource VisibilityConverter}}">
+											<MenuItem.Icon>
+												<Image
+													Width="16"
+													Height="16"
+													Source="/Icons/rename_folder.png" />
+											</MenuItem.Icon>
+										</MenuItem>
 										<MenuItem
 											Command="{Binding RemoveFolder}"
 											Header="{x:Static res:EncodingRes.PresetFolderRemoveFolderMenuItem}"
 											Visibility="{Binding IsNotRoot,
-											                     Converter={StaticResource VisibilityConverter}}" />
+											                     Converter={StaticResource VisibilityConverter}}">
+											<MenuItem.Icon>
+												<Image
+													Width="16"
+													Height="16"
+													Source="/Icons/delete_folder.png" />
+											</MenuItem.Icon>
+										</MenuItem>
 									</ContextMenu>
 								</Grid.ContextMenu>
 								<Border
@@ -179,6 +200,9 @@
 														<Setter Property="Visibility" Value="Collapsed" />
 													</MultiDataTrigger.Setters>
 												</MultiDataTrigger>
+												<DataTrigger Binding="{Binding IsBuiltIn}" Value="True">
+													<Setter Property="Visibility" Value="Collapsed" />
+												</DataTrigger>
 											</Style.Triggers>
 										</Style>
 									</Button.Style>
