--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1188,7 +1188,10 @@
 		</Grid>
 
 		<!--  Encoding section  -->
-		<Grid Grid.Row="3" Background="{StaticResource SectionBackground}">
+		<Grid
+			Grid.Row="3"
+			Background="{StaticResource SectionBackground}"
+			Canvas.ZIndex="3">
 			<StackPanel
 				Margin="9 16"
 				HorizontalAlignment="Left"
@@ -1393,12 +1396,19 @@
 		</Grid>
 
 		<!--  Queue section  -->
-		<Grid Grid.Row="4">
+		<Grid Grid.Row="4" Canvas.ZIndex="2">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="3*" />
+				<ColumnDefinition Width="14*" />
+			</Grid.ColumnDefinitions>
 			<Grid.Background>
 				<SolidColorBrush Color="{StaticResource SectionBackgroundBottomColor}" />
 			</Grid.Background>
 
-			<Grid Name="tabsArea" Margin="0 8 0 0">
+			<Grid
+				Name="tabsArea"
+				Grid.ColumnSpan="2"
+				Margin="0 8 0 0">
 				<Grid.Background>
 					<SolidColorBrush Color="{StaticResource SectionBackgroundBottomColor}" />
 				</Grid.Background>
