Added code to remove update tab in options when updates are not supported. Updates are now no longer supported when running in desktop bridge mode as an Appx.

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -238,8 +238,7 @@
 								PopupAnimation="{DynamicResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}">
 								<mwt:SystemDropShadowChrome
 									x:Name="shadow"
-									MinWidth="{Binding ActualWidth,
-									                   ElementName=templateRoot}"
+									MinWidth="250"
 									MaxHeight="{TemplateBinding MaxDropDownHeight}"
 									Color="Transparent">
 									<Border
