--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -242,6 +242,13 @@
 								               Mode=TwoWay,
 								               UpdateSourceTrigger=PropertyChanged}" />
 						</Grid>
+
+						<TextBlock 
+							Margin="22 2 0 10"
+							Visibility="{Binding NameFormatOverrideEnabled,
+								                     Converter={StaticResource VisibilityConverter}}"
+							Text="{Binding NameFormatArguments, StringFormat={x:Static res:PickerRes.OverrideNameFormatLabel}}"
+							TextWrapping="Wrap" />
 						<CheckBox
 							Height="16"
 							Margin="0 6 0 0"
