--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -247,7 +247,7 @@
 							Margin="22 2 0 10"
 							Visibility="{Binding NameFormatOverrideEnabled,
 								                     Converter={StaticResource VisibilityConverter}}"
-							Text="{Binding NameFormatArguments, StringFormat={x:Static res:PickerRes.OverrideNameFormatLabel}}"
+							Text="{Binding NameFormat}"
 							TextWrapping="Wrap" />
 						<CheckBox
 							Height="16"
